<resources>
    <string name="app_name">CourtCounter</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="team_A">Team A</string>
    <string name="_0">0</string>
    <string name="add_three_points">+3 Points</string>
    <string name="add_two_points">+2 Points</string>
    <string name="add_one_point">Free Throw</string>
    <string name="team_B">Team B</string>
    <string name="reset">reset</string>
</resources>